# WeAreTheMakeneers

./: .gitignore  01_LED.fzz  LICENSE  LICENSE.md  Pipfile  README.md  VERSION  pyproject.toml
.devcontainer/: setup.sh
.github/workflows/: build-deploy.yml  build.yml
A_Console/: A_Console.ino
C_LEDanDigitalemPin/: C_LEDanDigitalemPin.fzz  C_LEDanDigitalemPin.ino
D_SchalterAnDigitalemPin/: D_SchalterAnDigitalemPin.ino
G_Feuchtigkeitssensor/: G_Feuchtigkeitssensor.ino
H_Servo/: H_Servo.fzz
I_Lichtsensor/: I_Lichtsensor.fzz
J_Lautsprecher/: J_Lautsprecher.ino
Y_Fussball/: Y_Fussball.ino
ZZ_SchalterZaehlerEntprellt-TODO/: F_SchalterZaehlerEntprellt.ino
docs/: 01-led-anschliessen.rst  02-led-steuern.rst  03-infos-an-computer.rst  04-schalter-einlesen.rst  10-auf-schalter-reagieren-egal-wo-program.rst  Makefile  Zusammenfassung.pptx  conf.py  conf_project.py  index.rst  license.rst
docs/00-preliminary-meeting/: index.rst
docs/01-preparation/: index.rst
docs/02-training-phase/: 00-software-installieren.rst  01-led-anschliessen.rst  02-led-steuern.rst  03-infos-an-computer.rst  04-schalter-einlesen.rst  05-led-ueber-schalter-ansteuern.rst  06-servo-ansteuern.rst  06-summer-ansteuern.rst  07-lichtsensor-benutzen.rst  07-servo-ansteuern.rst  08-lichtsensor-benutzen.rst  08-lichtsensor-steuert-led.rst  09-lichtsensor-steuert-led.rst  09-toggle-schalter-mit-bibliothek.rst  10-abstand-einlesen.rst  10-auf-schalter-reagieren-egal-wo-program.rst  11-motor-betreiben.rst  12-motor-ansteuern.rst  13-daten-und-signale-an-arduino-senden.rst  99-todos.rst  (+6 more)
(+40 files in other folders)
